# DiskEvolution

./: .gitignore  CMakeLists.txt  Diffusion.cpp  Diffusion.h  DiskWind.cpp  DiskWind.h  EvaporationModel.cpp  EvaporationModel.h  GridGeometry.cpp  GridGeometry.h  Makefile  ParameterParser.cpp  ParameterParser.h  README.md  Simulation.cpp  Simulation.h  ViscousDisk.cpp  ViscousDisk.h  build.sh  main.cpp
Debug/: DiskEvolution  densityPlot.py  dispersalPlot.py  lambda4.eps  parameter.par  plot.py  rho.py
Debug/DiskEvolution.dSYM/Contents/: Info.plist
Debug/DiskEvolution.dSYM/Contents/Resources/DWARF/: DiskEvolution
src/: DiskWind.cpp  DiskWind.h  EvaporationModel.cpp  EvaporationModel.h  GridGeometry.h  Simulation.cpp  Simulation.h
